--- a/ResturantManagementSystem/src/system/RemindersForm.form
+++ b/ResturantManagementSystem/src/system/RemindersForm.form
@@ -87,6 +87,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTextArea1MouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
