--- a/ResturantManagementSystem/src/system/EmailForm.form
+++ b/ResturantManagementSystem/src/system/EmailForm.form
@@ -153,6 +153,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField2">
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTextField2MouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField2ActionPerformed"/>
           </Events>
         </Component>
@@ -187,6 +188,9 @@
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="textAreaMessageMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
