--- a/ResturantManagementSystem/src/system/LoginAdmin.form
+++ b/ResturantManagementSystem/src/system/LoginAdmin.form
@@ -138,8 +138,14 @@
           </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="passwordFieldBox">
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="passwordFieldBoxMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="textfieldUser">
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="textfieldUserMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblUsername">
           <Properties>
