--- a/ResturantManagementSystem/src/system/Checkout.form
+++ b/ResturantManagementSystem/src/system/Checkout.form
@@ -495,6 +495,7 @@
                 <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                   <ComponentRef name="buttonGroup"/>
                 </Property>
+                <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="Cash"/>
                 <Property name="contentAreaFilled" type="boolean" value="false"/>
               </Properties>
