--- a/ResturantManagementSystem/src/system/BookingForm.form
+++ b/ResturantManagementSystem/src/system/BookingForm.form
@@ -511,8 +511,8 @@
         <Container class="javax.swing.JPanel" name="jPanel2">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="View">
-                <Property name="tabTitle" type="java.lang.String" value="View"/>
+              <JTabbedPaneConstraints tabName="View Reservation">
+                <Property name="tabTitle" type="java.lang.String" value="View Reservation"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -520,7 +520,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="436" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="438" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
