--- a/ResturantManagementSystem/src/system/EmailForm.form
+++ b/ResturantManagementSystem/src/system/EmailForm.form
@@ -142,8 +142,9 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="1">
-                <StringItem index="0" value="swabe@live.co.za"/>
+              <StringArray count="2">
+                <StringItem index="0" value="Select..."/>
+                <StringItem index="1" value="swabe@live.co.za"/>
               </StringArray>
             </Property>
           </Properties>
