--- a/ResturantManagementSystem/src/system/LoginAdmin.form
+++ b/ResturantManagementSystem/src/system/LoginAdmin.form
@@ -138,8 +138,14 @@
           </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="passwordFieldBox">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="passwordFieldBoxKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="textfieldUser">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textfieldUserKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblUsername">
           <Properties>
