--- a/ResturantManagementSystem/src/system/MainSystem.form
+++ b/ResturantManagementSystem/src/system/MainSystem.form
@@ -2086,17 +2086,14 @@
                                   <EmptySpace max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="currentEmail1" alignment="0" min="-2" pref="80" max="-2" attributes="0"/>
+                                      <Component id="currentEmail2" pref="86" max="32767" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="1" attributes="0">
-                                      <Group type="102" attributes="0">
-                                          <Component id="currentEmail1" min="-2" pref="80" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="currentEmail" max="32767" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="currentEmail2" pref="92" max="32767" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="jPasswordField1" pref="117" max="32767" attributes="0"/>
-                                      </Group>
+                                      <Component id="jPasswordField1" pref="121" max="32767" attributes="0"/>
+                                      <Component id="currentEmail" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -2338,9 +2335,9 @@
                                       <Component id="textUsername" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="buttonChangeUsername" alignment="0" min="-2" pref="145" max="-2" attributes="0"/>
-                                      <Component id="buttonChangePassword" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="buttonChangeUsername" pref="145" max="32767" attributes="0"/>
+                                      <Component id="buttonChangePassword" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                               </Group>
@@ -2404,7 +2401,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Change Email Password"/>
+                    <Property name="text" type="java.lang.String" value="Change Password"/>
                     <Property name="contentAreaFilled" type="boolean" value="false"/>
                     <Property name="opaque" type="boolean" value="true"/>
                   </Properties>
